// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organisations should render no organisations if the user has not requested any access 1`] = `
<Fragment>
  <Alert
    closeLabel="Close alert"
    show={true}
    transition={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": Object {
          "appear": false,
          "in": false,
          "mountOnEnter": false,
          "timeout": 300,
          "unmountOnExit": false,
        },
        "displayName": "Fade",
        "render": [Function],
      }
    }
    variant="warning"
  >
    You are not registered to apply for any Reporting Operation at this time. You can request access to a Reporting Operation by selecting one from the dropdown below.
  </Alert>
  <br />
  <Dropdown
    className="search-dropdown"
    navbar={false}
  >
    <h5
      className="jsx-14601785"
    >
      Add an Operation:
    </h5>
    <Bootstrap(DropdownToggle)
      as="input"
      onChange={[Function]}
      placeholder="Search..."
    />
    <DropdownMenu
      alignRight={false}
      flip={true}
    />
    <JSXStyle
      id="14601785"
    >
      .dropdown-toggle{padding:8px 16px;width:300px;border-radius:3px;border:1px solid #999;}
    </JSXStyle>
  </Dropdown>
</Fragment>
`;

exports[`Organisations should render the user's requested organisations 1`] = `
<Fragment>
  <Bootstrap(Table)
    bordered={true}
    hover={true}
    striped={true}
    style={
      Object {
        "marginBottom": "40px",
        "textAlign": "left",
      }
    }
  >
    <thead
      className="jsx-1706603431"
    >
      <tr
        className="jsx-1706603431"
      >
        <th
          className="jsx-1706603431"
        >
          Operation
        </th>
        <th
          className="jsx-1706603431"
        >
          Access Status
        </th>
        <th
          className="jsx-1706603431"
        >
          Facilities
        </th>
      </tr>
    </thead>
<<<<<<< HEAD
    <tbody>
      <Relay(UserOrganisationComponent)
=======
    <tbody
      className="jsx-1706603431"
    >
      <ForwardRef(Relay(UserOrganisationComponent))
>>>>>>> Update design for user dashboard
        key="OrgId"
        userOrganisation={
          Object {
            "id": "OrgId",
          }
        }
      />
    </tbody>
    <JSXStyle
      id="1706603431"
    >
      th.jsx-1706603431{padding:20px;font-weight:500;}
    </JSXStyle>
  </Bootstrap(Table)>
  <Dropdown
    className="search-dropdown"
    navbar={false}
  >
    <h5
      className="jsx-14601785"
    >
      Add an Operation:
    </h5>
    <Bootstrap(DropdownToggle)
      as="input"
      onChange={[Function]}
      placeholder="Search..."
    />
    <DropdownMenu
      alignRight={false}
      flip={true}
    />
    <JSXStyle
      id="14601785"
    >
      .dropdown-toggle{padding:8px 16px;width:300px;border-radius:3px;border:1px solid #999;}
    </JSXStyle>
  </Dropdown>
</Fragment>
`;
